--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+default_language_version:
+  python: python3.9
+
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
@@ -9,22 +12,26 @@ repos:
     -   id: check-json
     -   id: check-yaml
     -   id: debug-statements
-    -   id: detect-aws-credentials
     -   id: detect-private-key
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
 
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.0
+    hooks:
+    -   id: pyupgrade
+        args: [--py38-plus]
+        name: Upgrade code
+
 -   repo: https://github.com/psf/black
     rev: 22.1.0
     hooks:
-    -   id: black-jupyter
-        language_version: python3.8
+    -   id: black
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 4.0.1
     hooks:
     -   id: flake8
-        types: [file, python]
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.941
     hooks:
