--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,34 @@ mypy = "^0.942"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+known_first_party = [
+    "qsar_flash",
+]
+profile = "black"
+line_length = 120
+force_sort_within_sections = "False"
+order_by_type = "False"
+
+[tool.black]
+line-length = 120
+
+[tool.flake8]
+max-line-length = 120
+exclude = ".tox,*.egg,build,temp"
+select = "E,W,F"
+doctests = "True"
+verbose = 2
+# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
+format = "pylint"
+# see: https://www.flake8rules.com/
+ignore = [
+    "E731",  # Do not assign a lambda expression, use a def
+    "W504",  # Line break occurred after a binary operator
+    "F401",  # Module imported but unused
+    "F841",  # Local variable name is assigned to but never used
+    "W605",  # Invalid escape sequence 'x'
+    "F403", # Unable to detect undefined names
+    "E203",  # Whitespace before ':'
+]
