--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,44 @@
+[tool.poetry]
+name = "qsar_flash"
+version = "0.1.1"
+description = ""
+authors = ["Grigorev Rostislav <grigorjew.rostislaw@gmail.com>"]
+maintainers = ["Grigorev Rostislav <grigorjew.rostislawd@gmail.com>"]
+license = "Apache-2.0"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+pip = "^22.0.4"
+lightning-flash = "^0.7.2"
+sympy = "^1.10.1"
+class-resolver = {version = "^0.3.8", source = "pypi"}
+
+[tool.poetry.dev-dependencies]
+pre-commit = "^2.17.0"
+conda-lock = "^1.0.5"
+ipykernel = "^6.9.1"
+
+[tool.conda-lock]
+channels = [
+    "pytorch",
+    "pyg",
+    "conda-forge",
+    "defaults"
+]
+platforms = [
+    'linux-64',
+]
+
+[tool.conda-lock.dependencies]
+pyg = ">=2.0.0"
+rdkit = ">=2021.09.5"
+
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.isort]
 known_first_party = [
     "qsar_flash",
@@ -9,5 +50,3 @@ order_by_type = "False"
 
 [tool.black]
 line-length = 120
-
-[tool.flake8]
