--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pip = "^22.0.4"
 lightning-flash = "^0.7.2"
 sympy = "^1.10.1"
 class-resolver = {version = "^0.3.8", source = "pypi"}
+ase = "3.22.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
